<resources>
    <string name="app_name">MyNurse</string>

    <string name="settings">Settings</string>
    <string name="profile_type1">Chronic Heart Failure</string>
    <string name="profile_type2">Type 2</string>
    <string name="profile_type3">Type3</string>
    <string name="logout">Logout</string>

    <string name="sharedPreferenceFile">sessionInfo</string>
    <string name="user">username</string>
    <string name="isLoggedIn">isLoggedIn</string>

    <string name="action_settings">Settings</string>
    <string name="confirm_delete">Confirm account deletion</string>
    <string name="confirm_delete_message">This action cannot be undone.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="manage_account">Manage Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_records">Delete Records</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profiles">Add/Remove Conditions</string>
    <string name="select_profiles">Select Conditions</string>
    <string name="edit_provider_info">Edit Provider Information</string>
    <string name="provider_information">My Providers</string>
    <string name="provider_name">Name</string>
    <string name="provider_type">Type of provider (Cardiology)</string>
    <string name="provider_phone_number">Phone Number: </string>
    <string name="add_provider">Add!</string>
    <string name="submit">Submit</string>

    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_retyped">Retype new password</string>


    <string name="button_arzang">Switch to Arzang\'s test view!</string>
    <string name="edit_message">This is an edit text field</string>

    <string name="prompt_username">Enter a username: </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="prompt_password">Enter a passoword: </string>
    <string name="prompt_reenter_password">Enter the password again: </string>
    <string name="signup_button">Sign Up</string>
    <string name="password_warning_message_not_equal">Passwords are not the same</string>
    <string name="password_warning_message_empty">Must input password</string>
    <string name="username_warning_message_empty">Must input username</string>
    <string name="username_warning_already_exists">That username is already taken</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="prompt_login_username">Enter your username:</string>
    <string name="prompt_login_password">Enter your password:</string>
    <string name="warning_incorrect_login_cred">Incorrect Username or Password</string>

    <string name="offer_add_provider">Signup Successful.</string>
    <string name="offer_add_provider_message">Would you like to add a care provider at this time?</string>
    <string name="offer_add_provider_confirm">Yes</string>
    <string name="offer_add_provider_cancel">No</string>

    <string name="prompt_provider_name">Provider Name</string>
    <string name="prompt_provider_phonenumber">Provider Phone Number</string>
    <string name="hint_provider_name">provider name</string>
    <string name="hint_provider_phonenumber">provider phone number</string>

    <string name="Log_Out">Log Out</string>
    <string name="About">About</string>
    <string name="Settings">Settings</string>

    <string name="home_activity_greeting">Hello,</string>
</resources>