<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView android:id="@+id/prompt_username"
        android:text="@string/prompt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/username_input"
        android:layout_alignStart="@+id/username_input"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <EditText android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:layout_alignTop="@+id/prompt_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/username" />

    <TextView android:id="@+id/prompt_password"
        android:text="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_input"
        android:layout_alignLeft="@+id/username_input"
        android:layout_alignStart="@+id/username_input"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp" />

    <EditText android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:layout_alignTop="@+id/prompt_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/password" />

    <TextView android:id="@+id/prompt_reenter_password"
        android:text="@string/prompt_reenter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_alignLeft="@+id/prompt_password"
        android:layout_alignStart="@+id/prompt_password"
        android:layout_marginTop="6dp" />

    <EditText android:id="@+id/reentry_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/prompt_reenter_password"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/signup_button"
        android:text="@string/signup_button"
        android:onClick="submitSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp" />

    <ImageView android:id="@+id/password_warning_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/stat_sys_warning"
        android:background="@android:color/holo_red_light"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/prompt_reenter_password"
        android:layout_alignStart="@+id/prompt_reenter_password"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:visibility="invisible" />

    <TextView android:id="@+id/password_warning_message"
        android:text="@string/password_warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/password_warning_image"
        android:layout_toEndOf="@+id/password_warning_image"
        android:visibility="invisible" />

</RelativeLayout>