<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView3"
        android:layout_height="225dp"
        android:layout_marginTop="30dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/povider_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:layout_alignTop="@+id/prompt_provider_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/login_username" />

    <TextView android:id="@+id/prompt_provider_phonenumber"
        android:text="@string/prompt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/povider_name_input"
        android:layout_alignLeft="@+id/povider_name_input"
        android:layout_alignStart="@+id/povider_name_input"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp" />

    <EditText android:id="@+id/provider_phonenumber_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:layout_alignTop="@+id/prompt_provider_phonenumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/login_password" />

    <Button android:id="@+id/button_add_provider"
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_below="@+id/imageView3"
        android:onClick="submitLogin"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/button_sign_up"
        android:text="SIGN UP!"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add_provider"
        android:layout_centerHorizontal="true"
        android:onClick="submitSignUp"
        android:layout_marginTop="5dp" />

    <TextView android:id="@+id/prompt_provider_name"
        android:text="@string/prompt_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <ImageView android:id="@+id/login_warning_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/stat_sys_warning"
        android:background="@android:color/holo_red_light"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:visibility="invisible"
        android:layout_below="@+id/provider_phonenumber_input"
        android:layout_alignLeft="@+id/prompt_provider_name"
        android:layout_alignStart="@+id/prompt_provider_name"
        android:layout_marginTop="13dp" />

    <TextView android:id="@+id/login_warning_message"
        android:text="@string/warning_incorrect_login_cred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/login_warning_image"
        android:layout_centerHorizontal="true" />

</RelativeLayout>