<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_provider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.medappjam.AddProviderActivity"
    android:orientation="vertical">

    <TextView android:id="@+id/prompt_provider_name"
              android:text="@string/prompt_provider_name"
              android:textSize="20sp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignBottom="@+id/imageView3"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"
              android:layout_marginLeft="24dp"
              android:layout_marginStart="24dp"/>

    <EditText android:id="@+id/provider_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:layout_alignTop="@+id/prompt_provider_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_provider_name" />

    <TextView android:id="@+id/prompt_provider_phonenumber"
        android:text="@string/prompt_provider_phonenumber"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/povider_name_input"
        android:layout_alignLeft="@+id/povider_name_input"
        android:layout_alignStart="@+id/povider_name_input"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="15dp" />

    <EditText android:id="@+id/provider_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="17dp"
        android:layout_alignTop="@+id/prompt_provider_phonenumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_provider_phonenumber"
        android:inputType="phone"/>

    <Button android:id="@+id/button_add_provider"
        android:text="Submit"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/imageView3"
        android:layout_gravity="center"/>


    <!--
    <Button android:id="@+id/button_sign_up"
        android:text="SIGN UP!"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_add_provider"
        android:layout_centerHorizontal="true"
        android:onClick="submitSignUp"
        android:layout_marginTop="5dp" />
     -->

</LinearLayout>
